add test user login
