# docs/swagger.json
@@ -41,10 +41,24 @@
         "/api/user/login": {
             "post": {
                 "description": "Этот эндпоинт производит аутентификацию пользователя",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
                 "summary": "Аутентификация пользователя",
+                "parameters": [
+                    {
+                        "description": "JSON тело запроса",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.User"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "пользователь успешно аутентифицирован",
@@ -58,7 +72,7 @@
                             "type": "string"
                         }
                     },
-                    "404": {
+                    "401": {
                         "description": "неверная пара логин/пароль",
                         "schema": {
                             "type": "string"
